--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context=".MainActivity">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#7F00FF"
+        android:layout_weight="0.4"/>
 
-    <TextView
+    <!-- Company Logo -->
+    <!--<ImageView
+        android:id="@+id/logoImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_weight="0.1"
+        android:src="@drawable/company_logo" <!-- Replace with your actual logo resource -->/>
+-->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Title -->
+    <TextView
+        android:id="@+id/titleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:layout_weight="0.01"
+        android:text="Nostalgia Matching"
+        android:textSize="32sp" />
+    <!-- Increased font size -->
+
+    <!-- Buttons for Difficulty Selection -->
+
+
+
+    <Button
+        android:id="@+id/easyButton"
+        android:layout_width="237dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_weight="0.2"
+        android:text="Easy"
+        android:textSize="32sp"/>
+
+    <Button
+        android:id="@+id/mediumButton"
+        android:layout_width="225dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_weight="0.2"
+        android:text="Medium"
+        android:textSize="32sp"/>
+
+    <Button
+        android:id="@+id/hardButton"
+        android:layout_width="226dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_weight="0.2"
+        android:text="Hard"
+        android:textSize="32sp"/>
+
+    <!-- Buttons for Settings and How to Play -->
+    <Button
+        android:id="@+id/settingsButton"
+        android:layout_width="211dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_weight="0.1"
+        android:text="Settings"
+        android:textSize="32sp"/>
+
+    <Button
+        android:id="@+id/howToPlayButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="How to Play"
+        android:layout_marginTop="16dp"
+        android:layout_weight="0.1"
+        android:textSize="32sp"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#7F00FF"
+        android:layout_weight="0.1"
+ />
+</LinearLayout>
+
