--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.1"
-        android:src="@drawable/company_logo" <!-- Replace with your actual logo resource -->/>
+        android:src="@drawable/company_logo" />
 -->
 
     <!-- Title -->
@@ -71,7 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_weight="0.1"
-        android:text="Settings"
+        android:text="@string/settings"
         android:textSize="32sp"/>
 
     <Button
