--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
         android:layout_weight="0.01"
-        android:text="@strings/Title"
+        android:text="@string/Title"
         android:textSize="32sp" />
     <!-- Increased font size -->
 
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_weight="0.2"
-        android:text="@strings/easy"
+        android:text="@string/easy"
         android:textSize="32sp"/>
 
     <Button
