--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,8 @@
         android:layout_marginTop="16dp"
         android:layout_weight="0.2"
         android:text="@string/easy"
-        android:textSize="32sp"/>
+        android:textSize="32sp"
+        android:backgroundTint="@color/orange"/>
 
     <Button
         android:id="@+id/mediumButton"
@@ -53,7 +54,8 @@
         android:layout_marginTop="16dp"
         android:layout_weight="0.2"
         android:text="@string/medium"
-        android:textSize="32sp"/>
+        android:textSize="32sp"
+        android:backgroundTint="@color/orange"/>
 
     <Button
         android:id="@+id/hardButton"
@@ -62,7 +64,8 @@
         android:layout_marginTop="16dp"
         android:layout_weight="0.2"
         android:text="@string/hard"
-        android:textSize="32sp"/>
+        android:textSize="32sp"
+        android:backgroundTint="@color/orange"/>
 
     <!-- Buttons for Settings and How to Play -->
     <Button
@@ -72,7 +75,8 @@
         android:layout_marginTop="32dp"
         android:layout_weight="0.1"
         android:text="@string/settings"
-        android:textSize="32sp"/>
+        android:textSize="32sp"
+        android:backgroundTint="@color/orange"/>
 
     <Button
         android:id="@+id/howToPlayButton"
@@ -81,7 +85,8 @@
         android:text="@string/instructions"
         android:layout_marginTop="16dp"
         android:layout_weight="0.1"
-        android:textSize="32sp"/>
+        android:textSize="32sp"
+        android:backgroundTint="@color/orange"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
