--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -5,11 +5,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <View
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="0.1dp"
         android:layout_weight="0.15"
-        android:background="#7F00FF" />
+        android:background="@color/bgPurple"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginTop="20dp"
+            app:srcCompat="@drawable/logo" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/settingTextView"
@@ -19,17 +29,18 @@
         android:layout_marginTop="10dp"
         android:layout_weight="0.01"
         android:text="@string/settings"
-        android:textSize="32sp" />
+        android:textSize="40sp"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/languageTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="6dp"
+        android:layout_marginBottom="5dp"
         android:layout_weight="0.01"
         android:text="@string/lang"
-        android:textSize="20sp" />
+        android:textSize="25sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,61 +50,74 @@
 
         <Button
             android:id="@+id/buttonLanguageEN"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="380dp"
+            android:layout_height="68dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="8dp"
             android:layout_weight="1"
             android:text="@string/langEN"
-            android:textSize="32sp" />
+            android:textColor="@color/black"
+            android:textSize="32sp"
+            app:backgroundTint="@null"
+            android:background="@drawable/lang_selection_btn"/>
 
         <Button
             android:id="@+id/buttonLanguageCN"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="380dp"
+            android:layout_height="68dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="8dp"
             android:layout_weight="1"
             android:text="@string/langCN"
-            android:textSize="32sp" />
+            android:textSize="32sp"
+            android:textColor="@color/black"
+            app:backgroundTint="@null"
+            android:background="@drawable/lang_selection_btn"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/buttonLanguageBA"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="380dp"
+            android:layout_height="68dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="8dp"
             android:layout_weight="1"
+            android:background="@drawable/lang_selection_btn"
             android:text="@string/langIN"
-            android:textSize="32sp" />
+            android:textColor="@color/black"
+            android:textSize="32sp"
+            app:backgroundTint="@null" />
 
         <Button
             android:id="@+id/buttonLanguageTA"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="380dp"
+            android:layout_height="68dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="8dp"
             android:layout_weight="1"
+            android:background="@drawable/lang_selection_btn"
             android:text="@string/langTA"
-            android:textSize="32sp" />
+            android:textColor="@color/black"
+            android:textSize="32sp"
+            app:backgroundTint="@null" />
 
     </LinearLayout>
 
     <ImageView
         android:id="@+id/imageViewQRcode"
-        android:layout_width="250dp"
-        android:layout_height="230dp"
+        android:layout_width="200dp"
+        android:layout_height="190dp"
         android:layout_weight="0"
         android:layout_gravity="center_horizontal"
         android:scaleType="centerInside"
@@ -102,30 +126,39 @@
 
     <Button
         android:id="@+id/buttonHomePage"
-        android:layout_width="match_parent"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="8dp"
         android:layout_weight="0"
         android:text="@string/homePage"
-        android:textSize="26sp" />
+        android:textSize="30sp"
+        android:textColor="@color/black"
+        app:backgroundTint="@null"
+        android:background="@drawable/orange_btn"
+        android:layout_gravity="center_horizontal"/>
 
     <Button
         android:id="@+id/buttonKYDZWeb"
-        android:layout_width="match_parent"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="15dp"
         android:layout_weight="0"
+        android:background="@drawable/orange_btn"
         android:text="@string/KYDZWeb"
-        android:textSize="26sp" />
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        app:backgroundTint="@null" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_weight="0.1"
-        android:background="#7F00FF" />
+        android:background="@color/bgPurple" />
 
 </LinearLayout>
