--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,8 +35,7 @@
         android:textSize="32sp" />
     <!-- Increased font size -->
 
-    <!-- Buttons for Difficulty Selection -->
-    <!-- Buttons for Difficulty Selection -->
+    <!-- Button with one drawable -->
     <Button
         android:id="@+id/easyButton"
         android:layout_width="270dp"
@@ -48,10 +47,13 @@
         android:text="@string/easy"
         android:textSize="30sp"
         android:textColor="@color/black"
+        android:drawableLeft="@drawable/star"
+        android:drawablePadding="2dp"
         app:backgroundTint="@null"
         android:background="@drawable/orange_btn"
         android:layout_gravity="center_horizontal" />
 
+    <!-- Button with two drawables -->
     <Button
         android:id="@+id/mediumButton"
         android:layout_width="270dp"
@@ -63,26 +65,31 @@
         android:text="@string/medium"
         android:textSize="30sp"
         android:textColor="@color/black"
+        android:drawableLeft="@drawable/combined_icons_2"
+        android:drawablePadding="2dp"
         app:backgroundTint="@null"
         android:background="@drawable/orange_btn"
         android:layout_gravity="center_horizontal" />
 
+    <!-- Button with three drawables -->
+    <!-- Buttons for Settings and How to Play -->
     <Button
         android:id="@+id/hardButton"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="8dp"
         android:layout_weight="0"
-        android:text="@string/hard"
-        android:textSize="30sp"
-        android:textColor="@color/black"
-        app:backgroundTint="@null"
         android:background="@drawable/orange_btn"
-        android:layout_gravity="center_horizontal" />
+        android:drawableLeft="@drawable/combined_icons_3"
+        android:drawablePadding="2dp"
+        android:text="@string/hard"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        app:backgroundTint="@null" />
 
-    <!-- Buttons for Settings and How to Play -->
     <Button
         android:id="@+id/settingsButton"
         android:layout_width="270dp"
