--- a/app/src/main/res/layout/activity_easy_game1.xml
+++ b/app/src/main/res/layout/activity_easy_game1.xml
@@ -5,16 +5,41 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <View
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_weight="0"
-        android:background="#7F00FF" />
+        android:layout_height="0.1dp"
+        android:layout_weight="0.07"
+        android:background="@color/bgPurple"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_weight="1"
+            android:paddingBottom="20dp"
+            app:srcCompat="@drawable/logo" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_weight="1"
+            android:paddingBottom="20dp"
+            app:srcCompat="@drawable/star" />
+    </LinearLayout>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_weight="0"
         android:orientation="horizontal">
 
@@ -26,33 +51,44 @@
             android:layout_weight="1"
             android:text="@string/find"
             android:textAlignment="center"
-            android:textSize="26dp" />
+            android:textSize="35dp" />
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="80dp"
             android:layout_height="100dp"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
+            android:background="@drawable/blackoutline_bg"
+            android:scaleType="fitCenter"
+            app:backgroundTint="@null"
             app:srcCompat="@drawable/flask" />
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="80dp"
             android:layout_height="100dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="20dp"
             android:layout_weight="1"
+            android:background="@drawable/blackoutline_bg"
+            app:backgroundTint="@null"
             app:srcCompat="@drawable/flask" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_weight="0"
         android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/imageButtonCorrect1"
-            android:layout_width="160dp"
-            android:layout_height="180dp"
+            android:layout_width="140dp"
+            android:layout_height="160dp"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:background="@color/white"
             android:scaleType="centerInside"
@@ -60,8 +96,9 @@
 
         <ImageButton
             android:id="@+id/imageButtonCorrect2"
-            android:layout_width="160dp"
-            android:layout_height="180dp"
+            android:layout_width="140dp"
+            android:layout_height="160dp"
+            android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:background="@color/white"
             android:scaleType="centerInside"
@@ -72,13 +109,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_weight="0"
         android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/imageButtonWrong1"
-            android:layout_width="160dp"
-            android:layout_height="180dp"
+            android:layout_width="140dp"
+            android:layout_height="160dp"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:background="@color/white"
             android:scaleType="centerInside"
@@ -86,8 +128,9 @@
 
         <ImageButton
             android:id="@+id/imageButtonWrong2"
-            android:layout_width="160dp"
-            android:layout_height="180dp"
+            android:layout_width="140dp"
+            android:layout_height="160dp"
+            android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:background="@color/white"
             android:scaleType="centerInside"
@@ -97,29 +140,35 @@
 
     <Button
         android:id="@+id/buttonChooseDiff"
-        android:layout_width="240dp"
-        android:layout_height="wrap_content"
+        android:layout_width="260dp"
+        android:layout_height="64dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="16dp"
         android:layout_weight="0"
+        android:background="@drawable/orange_btn"
         android:text="@string/chooseDiff"
-        android:textSize="24dp" />
+        android:textColor="@color/black"
+        android:textSize="27dp"
+        app:backgroundTint="@null" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="240dp"
-        android:layout_height="wrap_content"
+        android:layout_width="260dp"
+        android:layout_height="64dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="3dp"
+        android:layout_marginBottom="15dp"
         android:layout_weight="0"
+        android:background="@drawable/orange_btn"
         android:text="@string/htp6"
-        android:textSize="24dp" />
+        android:textColor="@color/black"
+        android:textSize="27dp"
+        app:backgroundTint="@null" />
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_weight="0"
-        android:background="#7F00FF" />
+        android:layout_height="1dp"
+        android:layout_weight="0.02"
+        android:background="@color/bgPurple" />
 
 </LinearLayout>
