--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,100 +29,49 @@
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:layout_weight="0.01"
+        android:layout_marginTop="20dp"
         android:text="@string/Title"
-        android:textSize="32sp" />
+        android:textSize="40sp"
+        android:textStyle="bold" />
     <!-- Increased font size -->
 
     <!-- Button with one drawable -->
-    <Button
-        android:id="@+id/easyButton"
-        android:layout_width="270dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="8dp"
-        android:layout_weight="0"
-        android:text="@string/easy"
-        android:textSize="25sp"
-        android:textColor="@color/black"
-        android:drawableLeft="@drawable/star"
-        android:drawablePadding="2dp"
-        app:backgroundTint="@null"
-        android:background="@drawable/orange_btn"
-        android:layout_gravity="center_horizontal" />
-
-    <!-- Button with two drawables -->
-    <Button
-        android:id="@+id/mediumButton"
-        android:layout_width="270dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="8dp"
-        android:layout_weight="0"
-        android:text="@string/medium"
-        android:textSize="25sp"
-        android:textColor="@color/black"
-        android:drawableLeft="@drawable/combined_icons_2"
-        android:drawablePadding="2dp"
-        app:backgroundTint="@null"
-        android:background="@drawable/orange_btn"
-        android:layout_gravity="center_horizontal" />
-
-    <!-- Button with three drawables -->
-    <!-- Buttons for Settings and How to Play -->
-    <Button
-        android:id="@+id/hardButton"
-        android:layout_width="270dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="8dp"
-        android:layout_weight="0"
-        android:background="@drawable/orange_btn"
-        android:drawableLeft="@drawable/combined_icons_3"
-        android:drawablePadding="2dp"
-        android:text="@string/hard"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        app:backgroundTint="@null" />
+    <include layout="@layout/button_easy" />
+    <include layout="@layout/button_normal" />
+    <include layout="@layout/button_expert" />
 
     <Button
         android:id="@+id/settingsButton"
-        android:layout_width="270dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="8dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
         android:layout_weight="0"
-        android:text="@string/settings"
-        android:textSize="25sp"
-        android:textColor="@color/black"
-        app:backgroundTint="@null"
         android:background="@drawable/orange_btn"
-        android:layout_gravity="center_horizontal" />
+        android:text="@string/settings"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        app:backgroundTint="@null"
+        android:textStyle="bold"/>
 
     <Button
         android:id="@+id/howToPlayButton"
-        android:layout_width="270dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="8dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_weight="0"
-        android:text="@string/instructions"
-        android:textSize="25sp"
-        android:textColor="@color/black"
-        app:backgroundTint="@null"
         android:background="@drawable/orange_btn"
-        android:layout_gravity="center_horizontal" />
+        android:text="@string/instructions"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        app:backgroundTint="@null"
+        android:textStyle="bold"/>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_weight="0.05"
+        android:layout_weight="0.03"
         android:background="@color/bgPurple" />
 </LinearLayout>
-
