--- a/app/src/main/res/layout/activity_puzzle_easy.xml
+++ b/app/src/main/res/layout/activity_puzzle_easy.xml
@@ -40,7 +40,7 @@
         android:layout_height="450dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_weight="0.1">>
+        android:layout_weight="0.1">
 
         <LinearLayout
             android:layout_width="match_parent"
