--- a/app/src/main/res/layout/activity_puzzle_expert.xml
+++ b/app/src/main/res/layout/activity_puzzle_expert.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/logo"
+            android:id="@+id/imageView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
@@ -23,7 +23,7 @@
 
 
     <TextView
-        android:id="@+id/chooseThemeNormal"
+        android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -32,6 +32,8 @@
         android:text="@string/chooseTheme"
         android:textSize="40sp"
         android:textStyle="bold" />
+
+    <!-- First Row -->
 
     <ScrollView
         android:layout_width="match_parent"
@@ -51,20 +53,20 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageViewCutlery"
+                    android:id="@+id/imageViewParrot"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="30dp"
-                    android:src="@drawable/cutlery" />
+                    android:src="@drawable/parrot" />
 
                 <ImageView
-                    android:id="@+id/imageViewFood"
+                    android:id="@+id/imageViewdimsum"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="70dp"
-                    android:src="@drawable/food" />
+                    android:layout_marginLeft="35dp"
+                    android:src="@drawable/dimsum" />
             </LinearLayout>
 
             <LinearLayout
@@ -74,24 +76,24 @@
 
 
                 <TextView
-                    android:id="@+id/textViewCutlery"
+                    android:id="@+id/textViewParrot"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="70dp"
                     android:layout_marginRight="70dp"
                     android:layout_weight="0"
-                    android:text="@string/cutlery"
+                    android:text="@string/Parrot"
                     android:textSize="28sp" />
 
                 <TextView
-                    android:id="@+id/textViewFood"
+                    android:id="@+id/textViewdimsum"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:layout_marginLeft="30dp"
                     android:layout_weight="0"
-                    android:layout_marginLeft="50dp"
-                    android:text="@string/food"
+                    android:text="@string/DimSum"
                     android:textSize="28sp" />
             </LinearLayout>
 
@@ -102,7 +104,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btnCutlery"
+                    android:id="@+id/btnParrot"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
@@ -117,7 +119,7 @@
                     app:backgroundTint="@null" />
 
                 <Button
-                    android:id="@+id/btnFood"
+                    android:id="@+id/btndimSum"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
@@ -139,21 +141,21 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageViewAnimals"
+                    android:id="@+id/imageViewTingkat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="30dp"
-                    android:src="@drawable/dog" />
+                    android:src="@drawable/tingkat" />
 
                 <ImageView
-                    android:id="@+id/imageViewLivingRoom"
+                    android:id="@+id/imageViewMahjong"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="15dp"
                     android:layout_weight="1"
-                    android:src="@drawable/light" />
+                    android:src="@drawable/mahjong" />
 
             </LinearLayout>
 
@@ -163,24 +165,24 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textViewAnimals"
+                    android:id="@+id/textViewTingkat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="70dp"
+                    android:layout_marginLeft="50dp"
                     android:layout_marginRight="80dp"
                     android:layout_weight="0"
-                    android:text="@string/animals"
+                    android:text="@string/Tingkat"
                     android:textSize="28sp" />
 
                 <TextView
-                    android:id="@+id/textViewLivingRoom"
+                    android:id="@+id/textViewMahjong"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginLeft="20dp"
                     android:layout_weight="0"
-                    android:text="@string/livingRoom"
+                    android:text="@string/Mahjong"
                     android:textSize="28sp" />
             </LinearLayout>
 
@@ -190,7 +192,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btnAnimals"
+                    android:id="@+id/btnRose"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
@@ -205,7 +207,7 @@
                     app:backgroundTint="@null" />
 
                 <Button
-                    android:id="@+id/btnLivingRoom"
+                    android:id="@+id/btnDog"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
@@ -227,20 +229,20 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageViewFlower"
+                    android:id="@+id/imageViewOrchid"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="30dp"
-                    android:src="@drawable/lotus" />
+                    android:src="@drawable/orchid" />
 
                 <ImageView
-                    android:id="@+id/imageViewScenery"
+                    android:id="@+id/imageViewSatay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="70dp"
-                    android:src="@drawable/playground_rgb" />
+                    android:layout_marginLeft="50dp"
+                    android:src="@drawable/satay" />
 
             </LinearLayout>
 
@@ -250,24 +252,24 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textViewFlower"
+                    android:id="@+id/textViewOrchid"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="70dp"
                     android:layout_marginRight="80dp"
                     android:layout_weight="0"
-                    android:text="@string/flower"
+                    android:text="@string/Orchid"
                     android:textSize="28sp" />
 
                 <TextView
-                    android:id="@+id/textViewScenery"
+                    android:id="@+id/textViewSatay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:layout_marginLeft="30dp"
                     android:layout_weight="0"
-                    android:layout_marginLeft="10dp"
-                    android:text="@string/scenery"
+                    android:text="@string/Satay"
                     android:textSize="28sp" />
             </LinearLayout>
 
@@ -277,7 +279,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btnFlower"
+                    android:id="@+id/btnClogs"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
@@ -292,7 +294,6 @@
                     app:backgroundTint="@null" />
 
                 <Button
-                    android:id="@+id/btnScenery"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
@@ -314,20 +315,20 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageViewSnacks"
+                    android:id="@+id/imageViewGoldcoins"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="30dp"
-                    android:src="@drawable/snacks" />
+                    android:src="@drawable/goldcoins" />
 
                 <ImageView
-                    android:id="@+id/imageViewHouseholdItems"
+                    android:id="@+id/imageViewWeddingBasket"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="20dp"
-                    android:src="@drawable/householditems" />
+                    android:layout_marginLeft="65dp"
+                    android:src="@drawable/wedding_basket" />
 
             </LinearLayout>
 
@@ -337,23 +338,23 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textViewSnacks"
+                    android:id="@+id/textViewGoldcoins"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="50dp"
                     android:layout_marginRight="70dp"
                     android:layout_weight="0"
-                    android:text="@string/snacks"
+                    android:text="@string/GoldCoins"
                     android:textSize="28sp" />
 
                 <TextView
-                    android:id="@+id/textViewHouseholdItems"
+                    android:id="@+id/textViewWeddingBaskets"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="0"
-                    android:text="@string/householdItems"
+                    android:text="@string/WeddingBasket"
                     android:textSize="28sp" />
             </LinearLayout>
 
@@ -363,7 +364,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btnSnacks"
+                    android:id="@+id/btnArmchair"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
@@ -378,7 +379,7 @@
                     app:backgroundTint="@null" />
 
                 <Button
-                    android:id="@+id/btnHouseholdItems"
+                    android:id="@+id/btnBirdCage"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
