--- a/app/src/main/res/layout/activity_expert_game2.xml
+++ b/app/src/main/res/layout/activity_expert_game2.xml
@@ -94,7 +94,7 @@
                 android:background="@drawable/blackoutline_bg"
                 android:scaleType="fitCenter"
                 app:backgroundTint="@null"
-                app:srcCompat="@drawable/parrot" />
+                app:srcCompat="@drawable/dimsum" />
 
             <ImageView
                 android:id="@+id/correctImg1"
@@ -130,7 +130,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/blackoutline_bg"
                 app:backgroundTint="@null"
-                app:srcCompat="@drawable/parrot" />
+                app:srcCompat="@drawable/dimsum" />
 
             <ImageView
                 android:id="@+id/correctImg2"
@@ -166,7 +166,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/blackoutline_bg"
                 app:backgroundTint="@null"
-                app:srcCompat="@drawable/parrot" />
+                app:srcCompat="@drawable/dimsum" />
 
             <ImageView
                 android:id="@+id/correctImg3"
@@ -203,17 +203,17 @@
             android:layout_weight="1"
             android:background="@color/white"
             android:scaleType="centerInside"
-            android:src="@drawable/mortar_pestle"/>
+            android:src="@drawable/flask_x3_"/>
 
         <ImageButton
-        android:id="@+id/imageButtonExpertCorrect1"
-        android:layout_width="70dp"
-        android:layout_height="80dp"
-        android:layout_marginLeft="5dp"
-        android:layout_weight="1"
-        android:background="@color/white"
-        android:scaleType="centerInside"
-        android:src="@drawable/parrot_tails" />
+            android:id="@+id/imageButtonExpertCorrect1"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:scaleType="centerInside"
+            android:src="@drawable/unknown_dim_sum" />
 
         <ImageButton
             android:id="@+id/imageButtonExpertWrong2"
@@ -223,7 +223,7 @@
             android:layout_weight="1"
             android:background="@color/white"
             android:scaleType="centerInside"
-            android:src="@drawable/orchid" />
+            android:src="@drawable/birdcage" />
 
     </LinearLayout>
 
@@ -238,24 +238,14 @@
         android:orientation="horizontal">
 
         <ImageButton
-            android:id="@+id/imageButtonCorrect2"
+            android:id="@+id/imageButtonWrong3"
             android:layout_width="70dp"
             android:layout_height="80dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:background="@color/white"
             android:scaleType="centerInside"
-            android:src="@drawable/parrot_head" />
-
-        <ImageButton
-            android:id="@+id/imageButtonWrong3"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/laksa" />
+            android:src="@drawable/spoon" />
 
         <ImageButton
             android:id="@+id/imageButtonWrong4"
@@ -265,7 +255,17 @@
             android:layout_weight="1"
             android:background="@color/white"
             android:scaleType="centerInside"
-            android:src="@drawable/rose" />
+            android:src="@drawable/armchair" />
+
+        <ImageButton
+            android:id="@+id/imageButtonCorrect2"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:scaleType="centerInside"
+            android:src="@drawable/pao" />
 
     </LinearLayout>
 
@@ -287,17 +287,7 @@
             android:layout_weight="1"
             android:background="@color/white"
             android:scaleType="centerInside"
-            android:src="@drawable/radio" />
-
-        <ImageButton
-            android:id="@+id/imageButtonWrong6"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/ang_ku_kueh" />
+            android:src="@drawable/yellow_flower" />
 
         <ImageButton
             android:id="@+id/imageButtonCorrect3"
@@ -307,7 +297,17 @@
             android:layout_weight="1"
             android:background="@color/white"
             android:scaleType="centerInside"
-            android:src="@drawable/parrot_body" />
+            android:src="@drawable/siew_mai" />
+
+        <ImageButton
+            android:id="@+id/imageButtonWrong6"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:scaleType="centerInside"
+            android:src="@drawable/lotus" />
 
 
     </LinearLayout>
