--- a/app/src/main/res/layout/activity_expert_game2.xml
+++ b/app/src/main/res/layout/activity_expert_game2.xml
@@ -324,6 +324,7 @@
         android:text="@string/chooseDiff"
         android:textColor="@color/black"
         android:textSize="27dp"
+        android:visibility="invisible"
         app:backgroundTint="@null" />
 
     <Button
