Added basic easy game pages, theme selection buttons do not work properly.

--- a/app/src/main/res/layout/activity_puzzle_easy.xml
+++ b/app/src/main/res/layout/activity_puzzle_easy.xml
@@ -294,6 +294,7 @@
                     app:backgroundTint="@null" />
 
                 <Button
+                    android:id="@+id/btnSpoon"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
